Fix line break in header between search bar input and icon on different OSs

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -9,6 +9,10 @@ header {
             text-align: center;
             left: 50%;
             transform: translate(-50%, 0);
+
+            input {
+                width: 175px;
+            }
         }
     }
 
